# APD

tema1/: CMakeLists.txt
tema1/skel/: Makefile  genetic_algorithm.c  genetic_algorithm_par.c  genetic_algorithm_par.h  tema1.c
tema1/sol/: Makefile  README  genetic_algorithm_par.c  genetic_algorithm_par.h  individual.h  tema1_par.c
tema2/skel/: FinalResult.java  TaskMap.java  TaskReduce.java  Tema2.java  in.txt  in1.txt  in3.txt
